@@ -163,7 +163,7 @@ proc tip_download { dest file args } {
 		}
 		-i $shell_id -re ".*$decimal\r" {
 		    if {[info exists expect_out(buffer)]} {
-			verbose "$expect_out(buffer)"
+			verbose $expect_out(buffer)
 			exp_continue
 		    }
 		}
